[package]
name = "telegram-bot-debugger"
version = "0.4.1"
edition = "2024"

[lib]
name = "telegram_bot_debugger"
path = "src/lib.rs"

[[bin]]
name = "telegram-bot-debugger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
mockito = "1.7.0"
proptest = "1.9.0"
tempfile = "3.23"
tokio-test = "0.4.4"
